--- a/config.yaml
+++ b/config.yaml
@@ -5,16 +5,16 @@
 # Uncomment any of these values to override defaults.
 
 # Name of our server in the public parties list.
-#party_name: FFA
+party_name: வாய்ச்சொல் வீரர்கள் (Vaaichol Veerargal)
 
 # If true, your party will show up in the global public party list
 # Otherwise it will still be joinable via LAN or connecting by IP address.
-#party_is_public: true
+party_is_public: false
 
 # If true, all connecting clients will be authenticated through the master
 # server to screen for fake account info. Generally this should always
 # be enabled unless you are hosting on a LAN with no internet connection.
-#authenticate_clients: true
+authenticate_clients: true
 
 # IDs of server admins. Server admins are not kickable through the default
 # kick vote system and they are able to kick players without a vote. To get
@@ -22,6 +22,8 @@
 #admins:
 #- pb-yOuRAccOuNtIdHErE
 #- pb-aNdMayBeAnotherHeRE
+admins:
+- pb-IF4CVHE_ug==
 
 # Whether the default kick-voting system is enabled.
 #enable_default_kick_voting: true
@@ -30,18 +32,18 @@
 # servers on one machine.
 # 43210 is the default and the only port that will show up in the LAN
 # browser tab.
-#port: 43210
+port: 43210
 
 # Max devices in the party. Note that this does *NOT* mean max players.
 # Any device in the party can have more than one player on it if they have
 # multiple controllers. Also, this number currently includes the server so
 # generally make it 1 bigger than you need. Max-players is not currently
 # exposed but I'll try to add that soon.
-#max_party_size: 6
+max_party_size: 11
 
 # Options here are 'ffa' (free-for-all), 'teams' and 'coop' (cooperative)
 # This value is ignored if you supply a playlist_code (see below).
-#session_type: ffa
+session_type: teams
 
 # Playlist-code for teams or free-for-all mode sessions.
 # To host your own custom playlists, use the 'share' functionality in the
@@ -80,7 +82,7 @@
 
 # Series length in teams mode (7 == 'best-of-7' series; a team must
 # get 4 wins)
-#teams_series_length: 7
+teams_series_length: 7
 
 # Points to win in free-for-all mode (Points are awarded per game based on
 # performance)
@@ -92,7 +94,7 @@
 # if ${ACCOUNT} is present in the string, it will be replaced by the
 # currently-signed-in account's id. To fetch info about an account,
 # your back-end server can use the following url:
-# https://legacy.ballistica.net/accountquery?id=ACCOUNT_ID_HERE
+# http://bombsquadgame.com/accountquery?id=ACCOUNT_ID_HERE
 #stats_url: https://mystatssite.com/showstats?player=${ACCOUNT}
 
 # If present, the server subprocess will attempt to gracefully exit after
